@@ -109,6 +109,7 @@ YOUTRACK
 	Fixed #IP-1332: nginx / nginx-light package configuration fail which result to i-MSCP installation failure
 	Fixed #IP-1333: Local resolver not added into resolv.conf file
 	Fixed #IP-1334: Jessie - Bind9 options from /etc/default/bind9 file are ignored
+	Fixed #IP-1340: The public/tools/filemanager folder is not removed
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.2
